QQuickTextNodeEngine: prevent renderring transparent selection color

It is not necessary to render selection color which is transparent.

Fixes: QTBUG-83819
Change-Id: I45c086652e194192619aad025121e6064ab37a58
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit bf8b45e33af960c03c7dccf56e90e76eda1f510e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>